--- a/client/TabSwitcher/res/layout/activity_main.xml
+++ b/client/TabSwitcher/res/layout/activity_main.xml
@@ -5,11 +5,68 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
-    <LinearLayout
-        android:id="@+id/toolbar"
+    <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" />
+        android:layout_height="wrap_content" >
+
+        <RelativeLayout
+            android:id="@+id/toolbar"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="#ff363b40" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_gravity="right"
+                android:layout_toLeftOf="@+id/menu"
+                android:paddingRight="20dp"
+                android:src="@drawable/tabs_count_combo" />
+
+            <ImageView
+                android:id="@id/menu"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right"
+                android:paddingRight="10dp"
+                android:src="@drawable/menu" />
+
+            <ImageView
+                android:id="@+id/tab_normal"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_alignParentLeft="true"
+                android:paddingLeft="50dp"
+                android:paddingRight="14dp"
+                android:src="@drawable/tabs_normal" />
+
+            <ImageView
+                android:id="@+id/tab_private"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_toRightOf="@id/tab_normal"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp"
+                android:src="@drawable/tabs_private" />
+
+            <ImageView
+                android:id="@+id/tab_synced"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_toRightOf="@id/tab_private"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp"
+                android:src="@drawable/tabs_synced" />
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/titlebar"
+            android:layout_width="290dp"
+            android:layout_height="48dp"
+            android:layout_gravity="left"
+            android:src="@drawable/titlebar" />
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/webcontent"
