--- a/client/TabSwitcher/res/layout/activity_main.xml
+++ b/client/TabSwitcher/res/layout/activity_main.xml
@@ -72,6 +72,8 @@
         android:id="@+id/webcontent"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:scaleType="fitXY"
+        android:src="@drawable/screen_mozilla" />
 
 </LinearLayout>
