--- a/client/TabSwitcher/res/layout/activity_main.xml
+++ b/client/TabSwitcher/res/layout/activity_main.xml
@@ -68,10 +68,24 @@
             android:src="@drawable/titlebar" />
     </FrameLayout>
 
-    <ImageView
+    <RelativeLayout
         android:id="@+id/webcontent"
         android:layout_width="fill_parent"
+        android:background="#ff363b40"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1">
+		<ListView 
+	        android:id="@+id/tabslist"
+	        android:layout_width="200dp"
+	        android:layout_height="wrap_content"
+	        android:divider="@null"
+	        android:dividerHeight="0dp"
+	        android:overScrollMode="never"
+	        android:paddingRight="5dp"
+	        android:paddingTop="20dp"
+	        android:scrollbars="none"
+	        android:visibility="visible"
+	        android:layout_alignParentRight="true"  />
+    </RelativeLayout>
 
 </LinearLayout>
