--- a/client/TabSwitcher/res/layout/main_activity.xml
+++ b/client/TabSwitcher/res/layout/main_activity.xml
@@ -10,7 +10,7 @@
         android:name=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        class="com.github.notonepine.tabswitcher.TitleBarFragment"
+        class="com.notonepine.tabswitcher.TitleBarFragment"
         tools:layout="@layout/title_bar" />
 
     <FrameLayout
@@ -31,7 +31,7 @@
             android:id="@+id/tabs_list_fragment"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            class="com.github.notonepine.tabswitcher.TabsListFragment"
+            class="com.notonepine.tabswitcher.TabsListFragment"
             tools:layout="@layout/tabs_list" />
     </FrameLayout>
 
