Added dragging. Need to add hover.

--- a/client/TabSwitcher/res/layout/title_bar.xml
+++ b/client/TabSwitcher/res/layout/title_bar.xml
@@ -25,6 +25,7 @@
             android:layout_alignParentRight="true" >
 
             <ImageView
+                android:id="@+id/tabs_button"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:paddingRight="20dp"
